second commit-fixed bugs

--- a/src/app/components/courses/courses.component.html
+++ b/src/app/components/courses/courses.component.html
@@ -29,7 +29,7 @@
       
           <td><span>{{course.description}}</span></td>
 
-          <td><button  mat-raised-button color="primary"  routerLink="">Details</button></td>
+          <td><button  mat-raised-button color="primary"  routerLink="/ELearning/course/details/{{course.id}}">Details</button></td>
 
           <td><button  mat-raised-button color="primary"  routerLink="/ELearning/course/edit/{{course.id}}">Edit</button></td>
 
