--- a/src/app/components/topics/topics.component.html
+++ b/src/app/components/topics/topics.component.html
@@ -32,7 +32,7 @@
               
             <td><span>{{topic.subject}}</span></td>
   
-            <td><button  mat-raised-button color="primary"  routerLink="">Details</button></td>
+            <td><button  mat-raised-button color="primary"  routerLink="/ELearning/topic/details/{{topic.id}}">Details</button></td>
   
             <td><button  mat-raised-button color="primary"  routerLink="/ELearning/topic/edit/{{topic.id}}">Edit</button></td>
   
