--- a/src/app/components/course-details/course-details.component.scss
+++ b/src/app/components/course-details/course-details.component.scss
@@ -1,4 +1,4 @@
-.course-details-container {
+/*.course-details-container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -13,7 +13,57 @@
   
   .course-details video {
     width: 100%; /* Make the video fill the available width */
-    height: auto; /* Maintain aspect ratio */
-    max-height: 80vh; /* Limit the video height to 80% of the viewport height */
+    //height: auto; /* Maintain aspect ratio */
+   // max-height: 80vh; /* Limit the video height to 80% of the viewport height */
+  //}*/
+  
+
+  /* Card Container */
+ /* Add this CSS rule to your component's SCSS */
+
+
+.card {
+  display: flex;
+  flex-direction: column;
+  max-width: 800px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  margin: 20px;
+  padding: 20px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+  text-align: center; /* Optional: Center text horizontally */
+  align-items: center;
+ left:20%;
+
+ .separator-bar {
+  width: 100%;
+  height: 2px; /* Adjust the height as needed */
+  background-color: #333; /* Change the color as needed */
+  margin: 20px 0; /* Add space above and below the separator bar */
+}
+  .card-media {
+    max-width: 500px; /* Set the maximum width for the image */
+    height: auto; /* Maintain the aspect ratio */
   }
   
+ 
+  
+  // Card Title
+  h2 {
+      font-size: 1.5rem;
+      margin: 0;
+  }
+
+  // Card Description
+  p {
+      font-size: 1rem;
+      margin: 10px 0;
+  }
+
+  // Card Media (Image or Video)
+  &-media {
+      max-width: 100%;
+      height: auto;
+  }
+}
