--- a/src/app/components/degrees/degrees.component.html
+++ b/src/app/components/degrees/degrees.component.html
@@ -32,7 +32,7 @@
               
             <td><span>{{degree.description}}</span></td>
 
-            <td><button  mat-raised-button color="primary"  routerLink="">Details</button></td>
+            <td><button  mat-raised-button color="primary"  routerLink="/ELearning/degree/details/{{degree.id}}">Details</button></td>
 
             <td><button  mat-raised-button color="primary"  routerLink="/ELearning/degree/edit/{{degree.id}}">Edit</button></td>
 
@@ -52,3 +52,4 @@
 </div>
 
 </body>
+    
