--- a/src/app/components/subjects/subjects.component.html
+++ b/src/app/components/subjects/subjects.component.html
@@ -32,7 +32,7 @@
               
             <td><span>{{subject.description}}</span></td>
 
-            <td><button  mat-raised-button color="primary"  routerLink="">Details</button></td>
+            <td><button  mat-raised-button color="primary"  routerLink="/ELearning/subject/details/{{subject.id}}">Details</button></td>
 
             <td><button  mat-raised-button color="primary"  routerLink="/ELearning/subject/edit/{{subject.id}}">Edit</button></td>
 
